# aws-s3-explorer

./: .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  config.json
assets/: icon.icns
docs/superpowers/plans/: 2026-07-05-drag-drop-copy-move.md  2026-07-06-app-icons.md
docs/superpowers/specs/: 2026-07-05-drag-drop-copy-move-design.md  2026-07-06-app-icons-design.md
packaging/linux/: aws-s3-explorer.desktop.in  install.sh
src/: CLAUDE.md  app.rs  config.rs  main.rs  types.rs
src/fs/: local.rs
src/s3/: client.rs
src/sync/: engine.rs
src/ui/: dnd.rs  local_pane.rs  mod.rs  s3_pane.rs  toolbar.rs  transfer_panel.rs
